<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_di"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/di" />

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/todo" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/weather" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet_black_24dp"
        android:title="@string/wallet" />
</menu>
